# HAB-project

./: .gitignore  HAB_project_notes.docx  README.md  Thumbs.db  YERRALOON1_telemetry.txt  config.py  dead_code.txt  file_writer.py  how_far.py  landing.py  other_commands.py  prediction(v0.1).py  prediction(v0.2).py  prediction(v1.0).py  prediction.py  prediction.txt  prediction_v1.1.py  prediction_v1.2.py  prediction_v1.3.py  pyproject.toml  requirements.txt  requirements_dev.txt  ryan_reader.py  setup.cfg  store.pckl  telemetry_test.csv  telemetry_test.txt  test.txt  test2.txt  test3.txt  todo.txt  untitled1.py  velocity_test.py  wind.py  ~$B-LPR-SRD-0001_Landing_prediction_system_requirements.docx  ~$B_project_notes.docx
Documents from Jamie/: HAB-LPR-SRD-0001_Landing_prediction_system_requirements.docx
ENGN3100 stuff/: ENGN3100_report_Uri_Pierre_Burmester.aux  ENGN3100_report_Uri_Pierre_Burmester.out  ENGN3100_report_Uri_Pierre_Burmester.tex  ENGN3100_report_Uri_Pierre_Burmester.toc  Thumbs.db
Extra_Scripts/: dead_code.txt  untitled0.py
Flight/: README.txt  config.py  landing.py  other_commands.py  prediction.py
Report/: HAB_project_notes.docx  HAB_project_plan.aux  HAB_project_plan.out  HAB_project_plan.tex  HAB_project_plan.toc  HAB_project_report.aux  HAB_project_report.out  HAB_project_report.tex  HAB_project_report.toc  Intern Report Template v0.2.docx
YERRALOON1_DATA/: prediction.txt  telemetry.txt
hab/: config.py  landing.py  new.py  other_commands.py  prediction.py  wind.py
hab_project/: analysis.py  balloon.py  config.py  const.py  definitions.py  (+6 more)
(+13 files in other folders)
