[metadata]
name = hab_project
version = 0.1
description = High-altitude balloon (HAB) analyser
author = Uri Pierre Burmester
author_email = uri.burmester@anu.edu.au
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    hab_project
python_requires = >=3.9
zip_safe = no

[options.extras_require]
testing =
    matplotlib>=3.3.3
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
hab_project = py.typed

[flake8]
ignore = E221, W605, W504, E127, E126
max-line-length = 160

[mypy]
mypy_path = "hab_project"
plugins = numpy.typing.mypy_plugin
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true